fixed spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -1317,9 +1317,9 @@
         -webkit-box-align: center;
             -ms-flex-align: center;
                 align-items: center;
-        -webkit-box-pack: justify;
-            -ms-flex-pack: justify;
-                justify-content: space-between;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
         max-width: 700px;
         margin-bottom: 20px;
         margin: auto;
